infrastructure/searxng-tor/torproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tor-socks
  namespace: malg
  labels:
    app.kubernetes.io/name: torproxy
    app.kubernetes.io/instance: torproxy
    app.kubernetes.io/part-of: malg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: torproxy
    app.kubernetes.io/instance: torproxy
  ports:
    - name: socks
      port: 9050
      targetPort: socks
      protocol: TCP
