infrastructure/searxng-tor/searxng-tor-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-searxng-tor
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
      app.kubernetes.io/instance: searxng-tor
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: worker
            k8s:app.kubernetes.io/instance: malg-worker
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng-evaluation
            k8s:app.kubernetes.io/instance: searxng-evaluation
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: torproxy
            k8s:app.kubernetes.io/instance: torproxy
      toPorts:
        - ports:
            - port: "9050"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: tor-socks.malg.svc.cluster.local.
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: malg-torproxy
  namespace: malg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: torproxy
      app.kubernetes.io/instance: torproxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: malg
            k8s:app.kubernetes.io/name: searxng
            k8s:app.kubernetes.io/instance: searxng-tor
      toPorts:
        - ports:
            - port: "9050"
              protocol: TCP
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "9001"
              protocol: TCP
